--- a/Main/MainPage.html
+++ b/Main/MainPage.html
@@ -3,17 +3,17 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
+  <title>Main Page</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<body style="background-color:gray">
 
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  
 </p>
 <p>
   Sean made a change
