--- a/Main/MainPage.html
+++ b/Main/MainPage.html
@@ -7,7 +7,7 @@
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
-<body style="background-color:dark_gray">
+<body style="background-color:gray">
 
 <img src="forkit.gif" id="octocat" alt="" />
 
